# snips

howtos/: multiple_gh.md
scripts/aws_sm/: secret.sh
scripts/delete_postgres/: delete_postgres.py  pyproject.toml  report.py
